# test-bot

./: Dockerfile  README.md  bybit_client.py  main.py  pyproject.toml  rsi_calculator.py
bot/: rsi_calculator.py
tests/: test_bot.py
